--- a/views/cases.ejs
+++ b/views/cases.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Covid Tracker App</title>
   </head>
   <body>
@@ -24,12 +24,45 @@
       </ul>
 </section>
 
-
+<form action="/">
+  <button class="btn btn-info" type="submit"><i class="fas fa-redo-alt"></i>Check a different country</button>
+</form>
 
 <section>
+
+  <h2>Covid News</h2>
+  <hr>
+
     <!-- // NEWS API? //-->
+    <% news.forEach(newsItem => { %>
+          <div>
+            
+            <img src="<%= newsItem.urlToImage%>" width="200px" height="100px">
+            <h3><%= newsItem.title%></h3>
+            <small><%= newsItem.author%></small>
+            <small><%= moment(newsItem.publishedAt).format('LL')%></small>
+            <small><%= newsItem.source.name%></small>
+
+            <p><%= newsItem.description%></p>
+            
+            <a href="<%= newsItem.url%>">Click to read more</a>
+          </div>
+          <hr>
+    <% }) %>
 </section>
     
+
+<footer>
+  <ul>
+    <li>LinkedIn</li>
+    <li>Github</li>
+    <li>Facebook</li>
+  </ul>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   
   </body>
 </html>
