--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
       <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container d-flex justify-content-between">
           <a href="/" class="navbar-brand d-flex align-items-center">
-                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="50px" height="50px" x="0px" y="0px"
+                  <svg class="p-2" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="50px" height="50px" x="0px" y="0px"
                     width="600px" height="600px" viewBox="0 0 600 600" enable-background="new 0 0 600 600" xml:space="preserve">
                     <path id="color_x5F_1" fill="#EA2F3A" d="M337.804,424.2c2.225,5.558-4.144,13.336-14.226,17.373
                     c-10.082,4.037-20.059,2.805-22.285-2.753c-2.225-5.558,4.144-13.336,14.226-17.373C325.601,417.409,335.579,418.642,337.804,424.2z
@@ -417,7 +417,7 @@
     
       <footer class="mastfoot mt-auto">
         <div class="inner">
-          <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+          <p>Web development project, by <a href="https://www.linkedin.com/in/amiellapuebla/" target="_blank">Amiel L.</a></p>
         </div>
       </footer>
     </div>
