--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
           <div class="row">
             <div class="col-sm-8 col-md-7 py-4">
               <h4 class="text-white">About</h4>
-              <p class="text-muted">A COVID-19 information site build with Node Express.</p>
+              <p class="text-muted">A COVID-19 information site build with Node Express. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci dolorem dolorum hic odit. Illum quas mollitia, optio temporibus amet assumenda?</p>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Contact</h4>
